--- a/templates/index.html
+++ b/templates/index.html
@@ -591,8 +591,14 @@
     </script>
 
     <script>
+        function likeCountBtn(children) {
+            let count = parseInt(children[1].innerText)
+            count += 1
+            children[1].innerText = count
+        }
+
         $(document).ready(function () {
-            selected_trackLists();
+            selected_trackLists()
         });
 
         function selected_trackLists() {
@@ -615,7 +621,7 @@
                                     </div>
                                     <div class="card-footer">
                                         <p class="card-text">${selected_track.artists}</p>
-                                        <button id="like" class="likes">
+                                        <button onclick="likeCountBtn(this.children)" id="like" class="likes">
                                             <i class="fa-solid fa-heart fa-2x"></i>
                                             <strong>0</strong>
                                         </button>
@@ -637,18 +643,6 @@
             })
         }
 
-    </script>
-
-    <script>
-        const btns_like = document.getElementById('like')
-
-        btns_like.forEach((item, index) => {
-            item.addEventListener('click', function () {
-                let count = parseInt(item.children[1].innerText)
-                count += 1
-                item.children[1].innerText = count
-            })
-        })
     </script>
 
 
