--- a/templates/index.html
+++ b/templates/index.html
@@ -726,7 +726,7 @@
     <div class="popup_add_song" id="popup" style="display: none;">
         <div class="contents">
             <i class="fa-solid fa-bowl-food fa-9x" style="margin: 10px;"></i>
-            <p><strong>Playlist</strong> 비빔밥에 노래가 담겼어요.</p>
+            <p><strong>Playlist Bibimbap</strong>에 노래가 담겼어요.</p>
         </div>
     </div>
 
@@ -736,7 +736,7 @@
 
     <div class="songs_time">
         <h1>
-            <b>오후 1시에는 이 노래들이 모이고 있어요!</b>
+            <b>지금 Playlist Bibimbap에 이 노래들이 담겨 있어요!</b>
         </h1>
         <div class="cards row row-cols-5" id="cards-box"
              style="align-items: center;justify-content: center; margin: auto;">
