--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
 
     <!--스타일 시트 연결/커밋테스트-->
     <!--    <link rel="stylesheet" href="./static/css/style.css">-->
+    <link rel="icon" href="/static/img/favicon.ico">
 
     <title>Playlist Bibimbap</title>
 
