--- a/templates/index.html
+++ b/templates/index.html
@@ -490,7 +490,7 @@
                                                     <button type="button" id="select" class="btn btn-light" onclick="popup_show(); select_track(this)" ><i class="fa-solid fa-spoon fa-2x" style="transform: scaleX(-1);"></i></button>
                                                 </div>
                                                 <div>
-                                                    <button onclick="preview_play(this.nextElementSibling)" style="border:0; outline:0; background-color:transparent;">
+                                                    <button onclick="preview_play(this.nextElementSibling)" style="border:0; outline:0; background-color:transparent; color: #1ED760;">
                                                         <i class="fa-brands fa-spotify fa-2x" ></i>
                                                     </button>
                                                     <audio id="play">
@@ -599,7 +599,7 @@
         }
 
         $(document).ready(function () {
-            selected_trackLists()
+            selected_trackLists();
         });
 
         function selected_trackLists() {
@@ -611,32 +611,32 @@
                     let selectedTracks = response.selected_track;
                     selectedTracks.sort((a, b) => b.timestamp - a.timestamp);
                     selectedTracks.forEach(function (selected_track) {
-                        let selected_trackList = `
-                                <div class="card">
-                                    <div class="card-header">
-                                        <img src="${selected_track.image}" alt="Track Image">
-                                    </div>
-                                    <div class="card-body">
-                                            <h5 class="card-title" id="selected_tracks">${selected_track.track}</h5>
-                                            <p class="count">${selected_track.count}명이 듣고 있어요</p>
-                                    </div>
-                                    <div class="card-footer">
-                                        <p class="card-text">${selected_track.artists}</p>
-                                        <button onclick="likeCountBtn(this.children)" id="like" class="likes">
-                                            <i class="fa-solid fa-heart fa-2x"></i>
-                                            <strong>0</strong>
-                                        </button>
+                        let selected_trackList = `<div class="col">
+                                                    <div class="card">
+                                                        <div class="card-header">
+                                                            <img src="${selected_track.image}" alt="Track Image">
+                                                        </div>
+                                                        <div class="card-body">
+                                                                <h5 class="card-title" id="selected_tracks">${selected_track.track}</h5>
+                                                                <p class="count">${selected_track.count}명이 듣고 있어요</p>
+                                                        </div>
+                                                        <div class="card-footer">
+                                                            <p class="card-text">${selected_track.artists}</p>
+                                                            <button onclick="likeCountBtn(this.children)" id="like" class="likes">
+                                                                <i class="fa-solid fa-heart fa-2x"></i>
+                                                                <strong>0</strong>
+                                                            </button>
 
-                                         <button onClick="preview_play(this.nextElementSibling)"
-                                                    style="border:0; outline:0; background-color:transparent; margin-left: 5px; ">
-                                                <i class="fa-brands fa-spotify fa-2x"></i>
-                                         </button>
-                                         <audio id="play">
-                                             <source src=${selected_track.url} type="audio/mpeg">
-                                         </audio>
-                                    </div>
-                                </div>
-                        `
+                                                             <button onClick="preview_play(this.nextElementSibling)"
+                                                                        style="border:0; outline:0; background-color:transparent; margin-left: 5px; ">
+                                                                    <i class="fa-brands fa-spotify fa-2x"></i>
+                                                             </button>
+                                                             <audio id="play">
+                                                                 <source src=${selected_track.url} type="audio/mpeg">
+                                                             </audio>
+                                                        </div>
+                                                    </div>
+                                                </div>`
 
                         $('#cards-box').append(selected_trackList)
                     });
