--- a/templates/index.html
+++ b/templates/index.html
@@ -662,32 +662,32 @@
                     let selectedTracks = response.selected_track;
                     selectedTracks.sort((a, b) => b.timestamp - a.timestamp);
                     selectedTracks.forEach(function (selected_track) {
-                        let selected_trackList = `
-                                <div class="card">
-                                    <div class="card-header">
-                                        <img src="${selected_track.image}" alt="Track Image">
-                                    </div>
-                                    <div class="card-body">
-                                            <h5 class="card-title" id="selected_tracks">${selected_track.track}</h5>
-                                            <p class="count">${selected_track.count}명이 듣고 있어요</p>
-                                    </div>
-                                    <div class="card-footer">
-                                        <p class="card-text">${selected_track.artists}</p>
-                                        <button onclick="likeCountBtn(this.children)" id="like" class="likes">
-                                            <i class="fa-solid fa-heart fa-2x"></i>
-                                            <strong>0</strong>
-                                        </button>
+                        let selected_trackList = `<div class="col">
+                                                    <div class="card">
+                                                        <div class="card-header">
+                                                            <img src="${selected_track.image}" alt="Track Image">
+                                                        </div>
+                                                        <div class="card-body">
+                                                                <h5 class="card-title" id="selected_tracks">${selected_track.track}</h5>
+                                                                <p class="count">${selected_track.count}명이 듣고 있어요</p>
+                                                        </div>
+                                                        <div class="card-footer">
+                                                            <p class="card-text">${selected_track.artists}</p>
+                                                            <button onclick="likeCountBtn(this.children)" id="like" class="likes">
+                                                                <i class="fa-solid fa-heart fa-2x"></i>
+                                                                <strong>0</strong>
+                                                            </button>
 
-                                         <button onClick="preview_play(this.nextElementSibling)"
-                                                    style="border:0; outline:0; background-color:transparent; margin-left: 5px; ">
-                                                <i class="fa-brands fa-spotify fa-2x"></i>
-                                         </button>
-                                         <audio id="play">
-                                             <source src=${selected_track.url} type="audio/mpeg">
-                                         </audio>
-                                    </div>
-                                </div>
-                        `
+                                                             <button onClick="preview_play(this.nextElementSibling)"
+                                                                        style="border:0; outline:0; background-color:transparent; margin-left: 5px; ">
+                                                                    <i class="fa-brands fa-spotify fa-2x"></i>
+                                                             </button>
+                                                             <audio id="play">
+                                                                 <source src=${selected_track.url} type="audio/mpeg">
+                                                             </audio>
+                                                        </div>
+                                                    </div>
+                                                </div>`
 
                         $('#cards-box').append(selected_trackList)
                     });
@@ -778,7 +778,7 @@
     <div class="popup_add_song" id="popup" style="display: none;">
         <div class="contents">
             <i class="fa-solid fa-bowl-food fa-9x" style="margin: 10px;"></i>
-            <p><strong>Playlist</strong> 비빔밥에 노래가 담겼어요.</p>
+            <p><strong>Playlist Bibimbap</strong>에 노래가 담겼어요.</p>
         </div>
     </div>
 
@@ -788,7 +788,7 @@
 
     <div class="songs_time">
         <h1>
-            <b>오후 1시에는 이 노래들이 모이고 있어요!</b>
+            <b>지금 Playlist Bibimbap에 이 노래들이 담겨 있어요!</b>
         </h1>
         <div class="cards row row-cols-5" id="cards-box"
              style="align-items: center;justify-content: center; margin: auto;">
