$('#cards-box').prepend(selected_trackList) 로 수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -694,7 +694,7 @@
                                                     </div>
                                                 </div>`
 
-                        $('#cards-box').append(selected_trackList)
+                        $('#cards-box').prepend(selected_trackList)
                     });
                 }
             })
