--- a/templates/index.html
+++ b/templates/index.html
@@ -627,21 +627,24 @@
         // children[1].innerText = count}
 
         function likeCountBtn() {
-            let liked_trackID = $(this).closest(".card").find("#selected_trackID").text();
-            let like_count = parseInt($(this).closest(".card").find("#like_count").text());
-            window.location.reload();
-        $.ajax({
-            type: "POST",
-            url: "/playlist",
-            data: {'like_trackID': liked_trackID},
-            success: function (response) {
-                console.log(response);
-            }
+            let liked_trackID = $(this).closest(".card").find("#selected_id").text();
 
-        });}
+            $.ajax({
+                type: "POST",
+                url: "/playlist",
+                data: {'like_trackID': liked_trackID},
+                success: function (response) {
+                    console.log(response);
+                }
+
+            });
+            window.location.reload()
+        }
+    </script>
+    <script>
 
         $(document).ready(function () {
-            selected_trackLists()
+            selected_trackLists();
         });
 
         function selected_trackLists() {
@@ -661,7 +664,7 @@
                                                         </div>
                                                         <div class="card-body">
                                                                 <h5 class="card-title" id="selected_tracks">${selected_track.track}</h5>
-                                                                <span class="visually-hidden" id="selected_trackID">${selected_track.trackID}</span>
+                                                                <span class="visually-hidden" id="selected_id">${selected_track.trackID}</span>
                                                                 <p class="count">${selected_track.count}명이 듣고 있어요</p>
                                                         </div>
                                                         <div class="card-footer">
@@ -669,7 +672,7 @@
 
                                                             <button type="submit" onclick="likeCountBtn()" id="like" class="likes">
                                                                 <i class="fa-solid fa-heart fa-2x"></i>
-                                                                <strong id="likeCount">0</strong>
+                                                                <strong id="likeCount">${selected_track.likes || 0}</strong>
                                                             </button>
 
                                                              <button onClick="preview_play(this.nextElementSibling)"
@@ -688,7 +691,6 @@
                 }
             })
         }
-
     </script>
 
 
