--- a/templates/index.html
+++ b/templates/index.html
@@ -686,7 +686,7 @@
                                                     </div>
                                                 </div>`
 
-                        $('#cards-box').append(selected_trackList)
+                        $('#cards-box').prepend(selected_trackList)
                     });
                 }
             })
