--- a/templates/index.html
+++ b/templates/index.html
@@ -628,7 +628,7 @@
         }
 
         $(document).ready(function () {
-            selected_trackLists();
+            selected_trackLists()
         });
 
         function selected_trackLists() {
@@ -669,7 +669,6 @@
                                                         </div>
                                                     </div>
                                                 </div>`
-
                         $('#cards-box').append(selected_trackList)
                     });
                 }
